--- a/virus/index.html
+++ b/virus/index.html
@@ -52,6 +52,7 @@
   <div class="stage" id="stage">
     <div class="flicker" aria-hidden="true"></div>
     <div class="headline glitch" id="headline" data-text="YOU'VE BEEN HACKED">YOU'VE BEEN HACKED</div>
+    <div class="term" id="term"></div> 
   </div>
 
 <script>
