--- a/virus/index.html
+++ b/virus/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>YOU'VE BEEN HACKED</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <meta name="description" content="Stylish 'You've been hacked' landing page (visual/demo only).">
 </head>
 <body>
   <main class="wrap" role="main">
     <div class="panel">
       <h1 class="title glitch" data-text="YOU'VE BEEN HACKED">YOU'VE BEEN HACKED</h1>
-      <p class="subtitle">This system has been compromised — demonstration/visual only.</p>
 
       <div class="stats">
         <div class="stat">
@@ -20,7 +19,7 @@
         </div>
         <div class="stat">
           <div class="label">Session ID</div>
-          <div class="value" id="session">—</div>
+          <div class="value" id="session">193</div>
         </div>
         <div class="stat">
           <div class="label">Progress</div>
@@ -35,7 +34,6 @@
 
       <div class="log" id="log" aria-hidden="true" style="display:none"></div>
 
-      <footer class="foot">Designed for demo / art — no real intrusion.</footer>
     </div>
   </main>
 
